force-app/main/default/objects/Contract/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Amount = Total Contracted Value if no Quote is related to Contract
Amount=Net Amount from quote</description>
    <formula>If (ISBLANK(SBQQ__Quote__c),  Total_Contract_value__c,  SBQQ__Quote__r.SBQQ__NetAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net Amount from Activation Quote</inlineHelpText>
    <label>Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>