force-app/main/default/objects/Contract/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <description>User Story ID: 46</description>
    <inlineHelpText>Will default to monthly billing frequency, however can be changed to quarterly billing</inlineHelpText>
    <label>Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>månedsvis.</fullName>
                <label>Månedsvis</label>
            </value>
            <value>
                <fullName>kvartalsvis.</fullName>
                <label>Kvartalsvis</label>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>K</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>