force-app/main/default/objects/Contract/fields/Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Cancellation__c</fullName>
    <description>User Story ID: 46</description>
    <label>Cancellation %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>