force-app/main/default/objects/Contract/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <description>User Story ID: 46</description>
    <inlineHelpText>Enter the cancellation date for when the contract is no longer effective</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>