force-app/main/default/objects/Contract/fields/Cancellation_Notice__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Notice__c</fullName>
    <description>User Story ID: 46</description>
    <label>Cancellation Notice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>2 Months</fullName>
            </value>
            <value>
                <fullName>1 Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>