force-app/main/default/objects/Contract/fields/Contract_Active__c.field-meta.xml
<CustomField>
    <fullName>Contract_Active__c</fullName>
    <description>Internal helper field used to set Contract status.</description>
    <formula>(StartDate &lt;= TODAY() &amp;&amp; TODAY() &lt;= EndDate &amp;&amp; ISNULL(Cancellation_Date__c))
||
(StartDate &lt;= TODAY() &amp;&amp; TODAY() &lt;= Cancellation_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Active</label>
    <type>Checkbox</type>
</CustomField>