force-app/main/default/objects/Contract/fields/Contract_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cancelled__c</fullName>
    <description>Internal helper field used to set Contract status.</description>
    <formula>NOT(ISBLANK(Cancellation_Date__c)) &amp;&amp; (Cancellation_Date__c  &lt; TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Cancelled</label>
    <type>Checkbox</type>
</CustomField>