force-app/main/default/objects/Contract/fields/Contract_Expired__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired__c</fullName>
    <description>Internal helper field used to set Contract status.</description>
    <formula>EndDate &lt; TODAY() &amp;&amp; ISNULL(Cancellation_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Expired</label>
    <type>Checkbox</type>
</CustomField>