force-app/main/default/objects/Contract/fields/Contract_ID_18__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract ID (18)</label>
    <type>Text</type>
</CustomField>