force-app/main/default/objects/Contract/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <formula>IF( Mobile_Part_of_Contract__c ,&quot;Mobile&quot;, IF( Fastnet_Part_of_Contract__c ,&quot;Fastnet&quot;, IF(Data_Part_of_Contract__c, &quot;Data&quot; ,&quot;&quot;)))</formula>
    <label>Contract Type</label>
    <type>Text</type>
</CustomField>