force-app/main/default/objects/Contract/fields/Data_Part_of_Contract__c.field-meta.xml
<CustomField>
    <fullName>Data_Part_of_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US412 - Contracts migration.</description>
    <inlineHelpText>During the contract migration, some contracts had several end dates and needed to be split into several subcontracts (mobile, data, fastnet). If this field is checked, it indicates that this contract is the mobile part of the contract.</inlineHelpText>
    <label>Data Part of Contract</label>
    <type>Checkbox</type>
</CustomField>