force-app/main/default/objects/Contract/fields/Exempt_for_price_index_regulation__c.field-meta.xml
<CustomField>
    <fullName>Exempt_for_price_index_regulation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This gets checked by the Contract: Created - Set Owner Flow. It could have easily fetched from SBQQ__Quote__r.ADD_Undtaget_fra_prisindeksering__c, but it requires to be editable by some users. Hence, the flow solution</description>
    <label>Exempt for price index regulation</label>
    <type>Checkbox</type>
</CustomField>