force-app/main/default/objects/Contract/fields/Expired_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Expired_Contract_Status__c</fullName>
    <label>Expired Contract Status</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>