force-app/main/default/objects/Contract/fields/Extra_special_terms__c.field-meta.xml
<CustomField>
    <fullName>Extra_special_terms__c</fullName>
    <description>This shows the extra special terms provided from the quote, when the contracted is created. It is not updated subsequently. Populated through this workflow rule Copy Extra Special Terms from Quote</description>
    <inlineHelpText>This shows the extra special terms provided from the quote</inlineHelpText>
    <label>Extra special terms from quote</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>