force-app/main/default/objects/Contract/fields/is_Modified_After_Enddate__c.field-meta.xml
<CustomField>
    <fullName>is_Modified_After_Enddate__c</fullName>
    <description>Check if the Contract has been modified after the EndDate</description>
    <formula>EndDate &lt; DateValue(LastModifiedDate)</formula>
    <inlineHelpText>Check if the Contract has been modified after the EndDate</inlineHelpText>
    <label>is Modified After Enddate</label>
    <type>Checkbox</type>
</CustomField>