force-app/main/default/objects/Contract/fields/is_Modified_after_StartDate__c.field-meta.xml
<CustomField>
    <fullName>is_Modified_after_StartDate__c</fullName>
    <description>Check if the Contract has been modified after the StartDate</description>
    <formula>StartDate &lt; DateValue(LastModifiedDate)</formula>
    <inlineHelpText>Check if the Contract has been modified after the StartDate</inlineHelpText>
    <label>is Modified after StartDate</label>
    <type>Checkbox</type>
</CustomField>