force-app/main/default/objects/Contract/fields/Link_to_Original_Contract_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Original_Contract_Sharepoint__c</fullName>
    <description>US412 - contract migration. link to sharepoint.</description>
    <inlineHelpText>Link to the original contract (only for migrated contracts).</inlineHelpText>
    <label>Link to Original Contract (Sharepoint)</label>
    <type>Url</type>
</CustomField>