force-app/main/default/objects/Contract/fields/Link_to_Original_Contract_X__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Original_Contract_X__c</fullName>
    <description>US412 - Old contracts migration. Link to the original contract.</description>
    <inlineHelpText>Link to the original contract (only for migrated contracts).</inlineHelpText>
    <label>Link to Original Contract (X folder)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>