force-app/main/default/objects/Contract/fields/Monthly_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contract_Value__c</fullName>
    <description>Field used in DLRS to summarize the monthly value of all subscriptions on the contract.</description>
    <inlineHelpText>Monthly Contract Value with discounts based on Subscriptions in Contract</inlineHelpText>
    <label>Monthly Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>