force-app/main/default/objects/Contract/fields/Product_s_in_scope__c.field-meta.xml
<CustomField>
    <fullName>Product_s_in_scope__c</fullName>
    <label>Product(s) in scope</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Product_Category</valueSetName>
    </valueSet>
</CustomField>