force-app/main/default/objects/Contract/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <description>User Story 46.
Note: IoT and</description>
    <label>Products</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Product_Category</valueSetName>
    </valueSet>
</CustomField>