force-app/main/default/objects/Contract/fields/Renewal_Opportunity_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Opportunity_Creation_Date__c</fullName>
    <description>Date when a renewal Opportunity should be created automatically. Set by a Flow on Contract creation.</description>
    <label>Renewal Opportunity Creation Date</label>
    <type>Date</type>
</CustomField>