force-app/main/default/objects/Contract/fields/Renewal_Quote_Creation_date__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Quote_Creation_date__c</fullName>
    <description>Date when a renewal quote should be created automatically. Set by a Flow on Contract creation.</description>
    <label>Renewal Quote Creation date</label>
    <type>Date</type>
</CustomField>