force-app/main/default/objects/Contract/fields/Renewal_Rules__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US412 - Old contracts migration. Migration of the field &quot;Genforhandlingsregel data&quot;.</description>
    <inlineHelpText>Indicates if there is any data related to renewal rules on the original contract (only for migrated contracts).</inlineHelpText>
    <label>Renewal Rules?</label>
    <type>Checkbox</type>
</CustomField>