force-app/main/default/objects/Contract/fields/Renewal_Rules_Termination__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Rules_Termination__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US412 - Old contracts migration (Genforhandlingsregel (ved 10 % opsigelse)). Indicates if there is any data related to the renewal rules regarding the 10% cancellation notice on the original contract.</description>
    <inlineHelpText>Indicates if there is any data related to the renewal rules regarding the 10% cancellation notice on the original contract (only for migrated contracts).</inlineHelpText>
    <label>Renewal Rules for Termination?</label>
    <type>Checkbox</type>
</CustomField>