force-app/main/default/objects/Contract/fields/Sign_On_Fee_Given__c.field-meta.xml
<CustomField>
    <fullName>Sign_On_Fee_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US412 - Contract migration. Indicates if the contract included a sign-on fee.</description>
    <label>Sign-On Fee Given</label>
    <type>Checkbox</type>
</CustomField>