force-app/main/default/objects/Contract/fields/Status_should_be__c.field-meta.xml
<CustomField>
    <fullName>Status_should_be__c</fullName>
    <description>BugFixing field: used for the stabilization analysis of the Fokus Integration.</description>
    <formula>IF( Contract_Active__c , &quot;Activated&quot;,
  IF( Contract_Expired__c , &quot;Expired&quot;,  
    IF( Contract_Cancelled__c , &quot;Cancelled&quot;, &quot;Draft or In Approval&quot;)
  ) 
)</formula>
    <inlineHelpText>BugFixing field: used for the stabilization analysis of the Fokus Integration.</inlineHelpText>
    <label>Status should be</label>
    <type>Text</type>
</CustomField>