force-app/main/default/objects/Contract/fields/Subscription_Net_Price_Total__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Net_Price_Total__c</fullName>
    <label>Subscription Net Price Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>