force-app/main/default/objects/Contract/fields/Subsidy_Given__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Given__c</fullName>
    <defaultValue>false</defaultValue>
    <description>US412 - Contract migration. Indicates if the contract included a subsidy.</description>
    <label>Subsidy Given</label>
    <type>Checkbox</type>
</CustomField>