force-app/main/default/objects/Contract/fields/Total_Contract_value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_value__c</fullName>
    <description>User Story ID: 46</description>
    <inlineHelpText>Total Contract value with discounts based on Subscriptions in Contract</inlineHelpText>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>