force-app/main/default/objects/Contract/fields/Total_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Total_Subsidy__c</fullName>
    <description>Used to pull subsidy from quote to renewal quote through contract and renewal opportunity</description>
    <label>Total Subsidy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>