force-app/main/default/objects/Contract/validationRules/Total_Contract_Value_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Contract_Value_mandatory</fullName>
    <active>true</active>
    <description>The total contract value is mandatory if there is no qoute related to the contract.</description>
    <errorConditionFormula>ISBLANK( SBQQ__Quote__c ) &amp;&amp;  ISBLANK( Total_Contract_value__c )
&amp;&amp;$Profile.Name &lt;&gt; &apos;System Administrator&apos;</errorConditionFormula>
    <errorMessage>If there is no quote related to the contract, the field Total Contract Value needs to be filled.</errorMessage>
</ValidationRule>