force-app/main/default/objects/Contract/listViews/Migrated_Contracts.listView-meta.xml
<ListView>
    <fullName>Migrated_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SBQQ__RenewalOpportunity__c</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Migrated_Contract__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Migrated Contracts</label>
</ListView>