force-app/main/default/objects/Contract/listViews/My_Active_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Active_Contracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.ACTIVATED_BY</columns>
    <columns>Total_Contract_value__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <label>My Active Contracts</label>
</ListView>