force-app/main/default/objects/Contract/listViews/My_Active_Contracts_without_Terms.listView-meta.xml
<ListView>
    <fullName>My_Active_Contracts_without_Terms</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Activated</value>
    </filters>
    <filters>
        <field>CONTRACT_TERM</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
        <value>Migration</value>
    </filters>
    <filters>
        <field>Contract_Type__c</field>
        <operation>equals</operation>
        <value>Mobile</value>
    </filters>
    <label>My Active Contracts without Terms</label>
</ListView>