force-app/main/default/objects/Contract/listViews/My_Expired_Contracts.listView-meta.xml
<ListView>
    <fullName>My_Expired_Contracts</fullName>
    <columns>Expired_Contract_Status__c</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>Contract_Type__c</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>SBQQ__ExpirationDate__c</columns>
    <columns>Monthly_Contract_Value__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>My Expired Contracts</label>
</ListView>